[package]
name = "klynt_common"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Time
chrono = { workspace = true }
time = { workspace = true }

# IDs
uuid = { workspace = true }
ulid = { workspace = true }

# Crypto
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
