[package]
name = "klynt_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
klynt_utils = { path = "../klynt_utils" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Time
chrono = { workspace = true }
