[package]
name = "klynt_shared_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Time
chrono = { workspace = true }

# Internal crates
klynt_utils = { path = "../klynt_utils" }

[dev-dependencies]
serde_json = { workspace = true }
