[package]
name = "klynt_domain"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
