[package]
name = "klynt_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crypto
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# IDs
uuid = { workspace = true }
ulid = { workspace = true }

# Time
time = { workspace = true }
chrono = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
